--- a/Menu_app/templates/menu_add.html
+++ b/Menu_app/templates/menu_add.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-success navbar-dark">
+    <nav class="navbar navbar-expand-lg text-white bg-dark navbar-dark">
         <div class="container">
             <a href="{% url 'index' %}" class="navbar-brand">Menu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
