--- a/Menu_app/templates/index.html
+++ b/Menu_app/templates/index.html
@@ -187,12 +187,26 @@
         {% endfor %}
 
     </table>
-    {% for menu in object_list %}
-    <li style="margin-left:10px;">{{menu.name}}</li>
+    {% for menu in page_obj %}
+    ...
     {% endfor %}
-    <br>
-    <div>
-        Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
     </div>
 
 </html>
