--- a/Menu_app/templates/menu_add.html
+++ b/Menu_app/templates/menu_add.html
@@ -8,13 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="style.css" />
     <title>Menu</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg text-white bg-dark navbar-dark">
-        <div class="container">
+        <div class="container-sm">
             <a href="{% url 'index' %}" class="navbar-brand">Menu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -41,11 +40,13 @@
     <section class="bg-white text-light pt-5 img-center">
         <div class="container">
             <div class="d-flex row">
-                {% for msg in messages %}
-                <div class="alert alert-success text-center" role="alert">
-                    {{ msg }}
+                {% if messages %}
+                <div class="alert alert-success">
+                    {% for m in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ m }}</li>
+                        {% endfor %}
                 </div>
-                {% endfor %}
+                {% endif %}
                 <div>
                 </div>
                 {% load static %}
